--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,20 @@ img {
 #chat {
      height: 400px;
      overflow: hidden;
+     text-align: left;
+}
+
+#chat-inset {
+    background-color: #DDD;
+    padding: 10px;
+    border: 3px inset gray;
+    overflow: hidden;
+}
+
+#chat-inset input {
+    position: absolute;
+    bottom: 1em;
+    width: 91%;
 }
 
 #network-status span {
