Improves multi-line button style.

--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ img {
     font-weight:normal;
     font-style:normal;
     height:57px;
-    line-height:57px;
+    line-height:1;
     width:128px;
     text-decoration:none;
     text-align:center;
